clean up code style, tabs to spaces