@@ -7,8 +7,8 @@
  *  This software is published under the GNU General Public License v3+
  *
  *
- *	For further information, please contact Hanns Holger Rutz at
- *	contact@sciss.de
+ *  For further information, please contact Hanns Holger Rutz at
+ *  contact@sciss.de
  */
 
 package de.sciss.eisenkraut.gui;
@@ -84,14 +84,14 @@ public class PrefsFrame
     private static final ParamSpace spcIntegerFromZero = new ParamSpace(0, Double.POSITIVE_INFINITY, 1, 0, 0, 0);
     private static final ParamSpace spcIntegerFromOne  = new ParamSpace(1, Double.POSITIVE_INFINITY, 1, 0, 0, 1);
 
-    private final Preferences		audioPrefs;
-    protected final Preferences		abPrefs;
+    private final Preferences audioPrefs;
+    protected final Preferences abPrefs;
 
     // audio box config
-    protected final List<AudioBoxConfig> collAudioBoxConfigs	= new ArrayList<AudioBoxConfig>();
-    private final Set<String> setAudioBoxIDs		= new HashSet<String>();
-    protected final Set<String> setAudioBoxNames	= new HashSet<String>();
-    protected static final String[]	audioBoxColNames	= { "prefsAudioDevice", "prefsAudioInputChannels", "prefsAudioOutputChannels", "prefsAudioDeviceActive" };
+    protected final List<AudioBoxConfig> collAudioBoxConfigs = new ArrayList<AudioBoxConfig>();
+    private final Set<String> setAudioBoxIDs = new HashSet<String>();
+    protected final Set<String> setAudioBoxNames = new HashSet<String>();
+    protected static final String[] audioBoxColNames = {"prefsAudioDevice", "prefsAudioInputChannels", "prefsAudioOutputChannels", "prefsAudioDeviceActive"};
 
     private static final StringItem[] RATE_ITEMS = {
             new StringItem(new Param(0, ParamSpace.FREQ | ParamSpace.HERTZ).toString(), "System Default"),
@@ -101,7 +101,7 @@ public class PrefsFrame
             new StringItem(new Param(96000, ParamSpace.FREQ | ParamSpace.HERTZ).toString(), "96 kHz")
     };
 
-    protected AudioBoxTableModel	abtm;
+    protected AudioBoxTableModel abtm;
 
     /**
      *  Creates a new preferences frame
@@ -111,337 +111,307 @@ public class PrefsFrame
 
         setTitle(getResourceString("framePrefs"));
 
-        final Container					cp					= getContentPane();
-        final Application				app					= AbstractApplication.getApplication();
-        final OSCRoot					osc;
-        final PrefCacheManager			cm;
-        final Flag						haveWarned          = new Flag(false);
-        final String					txtWarnLookAndFeel  = getResourceString("warnLookAndFeelUpdate");
+        final Container     cp          = getContentPane();
+        final Application   app         = AbstractApplication.getApplication();
+        final Flag          haveWarned  = new Flag(false);
+        final String txtWarnLookAndFeel = getResourceString("warnLookAndFeelUpdate");
 
-        final TreeExpanderButton		ggTreeAudio;
+        final OSCRoot osc;
+        final PrefCacheManager cm;
+
+        final TreeExpanderButton ggTreeAudio;
         final List<JComponent> collAudioAdvanced;
-        SpringPanel						tab;
-        PrefParamField					ggParam;
-        BasicPathField					ggPath;
-        PrefCheckBox					ggCheckBox;
-        PrefComboBox					ggChoice;
-        PrefTextField                   ggTextField;
-        JTabbedPane						ggTabPane;
-        JLabel							lb;
-        JComboBox						ggCombo;
-        UIManager.LookAndFeelInfo[]		lafInfo;
-        Box								b;
+        SpringPanel tab;
+        PrefParamField ggParam;
+        BasicPathField ggPath;
+        PrefCheckBox ggCheckBox;
+        PrefComboBox ggChoice;
+        PrefTextField ggTextField;
+        JTabbedPane ggTabPane;
+        JLabel lb;
+        JComboBox ggCombo;
+        UIManager.LookAndFeelInfo[] lafInfo;
+        Box b;
 
-        Preferences						prefs;
-        String							key, key2, title;
-        int								row;
+        Preferences prefs;
+        String key, key2, title;
+        int row;
 
-        ggTabPane	= new JTabbedPane();
+        ggTabPane = new JTabbedPane();
         ggTabPane.putClientProperty("styleId", "attached");
 
         // ---------- global pane ----------
 
-        tab		= createTab();
+        tab = createTab();
 
-        row		= 0;
-        prefs   = IOUtil.getUserPrefs();
-        key		= IOUtil.KEY_TEMPDIR;
-        key2	= "prefsTmpDir";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        ggPath	= new BasicPathField( PathField.TYPE_FOLDER, getResourceString( key2 ));
-        ggPath.setPreferences( prefs, key );
-        tab.gridAdd( ggPath, 1, row );
-
-        row++;
-        cm		= PrefCacheManager.getInstance();
-        prefs   = cm.getPreferences();
-        key		= PrefCacheManager.KEY_ACTIVE;
-        key2	= "prefsCache";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        ggCheckBox = new PrefCheckBox( getResourceString( "prefsCacheActive" ));
-        ggCheckBox.setPreferences( prefs, key );
-//		tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
-        b		= Box.createHorizontalBox();
-        b.add( ggCheckBox );
-//
-//		row++;
-        key		= PrefCacheManager.KEY_CAPACITY;
-        key2	= "prefsCacheCapacity";
-        lb		= new JLabel( getResourceString( key2 ) + " [" +
-                              getResourceString( "labelMegaBytes" ) + "]", TRAILING );
-//		tab.gridAdd( lb, 0, row );
-        b.add( Box.createHorizontalStrut( 16 ));
-        b.add( lb );
-        ggParam  = new PrefParamField();
-        ggParam.addSpace( spcIntegerFromOne );
-        ggParam.setPreferences( prefs, key );
-//		tab.gridAdd( ggParam, 1, row, -1, 1 );
-        b.add( ggParam );
-        tab.gridAdd( b, 1, row, -1, 1 );
-
-        row++;
-        key		= PrefCacheManager.KEY_FOLDER;
-        key2	= "prefsCacheFolder";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        ggPath	= new BasicPathField( PathField.TYPE_FOLDER, getResourceString( key2 ));
-        ggPath.setPreferences( prefs, key );
-        tab.gridAdd( ggPath, 1, row );
-
-        row++;
-        prefs   = app.getUserPrefs();
-        key		= PrefsUtil.KEY_REVEAL_FILE;
-        key2	= "prefsRevealCmd";
-        lb		= new JLabel(getResourceString(key2), TRAILING);
+        row = 0;
+        prefs = IOUtil.getUserPrefs();
+        key = IOUtil.KEY_TEMPDIR;
+        key2 = "prefsTmpDir";
+        lb = new JLabel(getResourceString(key2), TRAILING);
         tab.gridAdd(lb, 0, row);
-        ggTextField	= new PrefTextField(16);
+        ggPath = new BasicPathField(PathField.TYPE_FOLDER, getResourceString(key2));
+        ggPath.setPreferences(prefs, key);
+        tab.gridAdd(ggPath, 1, row);
+
+        row++;
+        cm = PrefCacheManager.getInstance();
+        prefs = cm.getPreferences();
+        key = PrefCacheManager.KEY_ACTIVE;
+        key2 = "prefsCache";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        ggCheckBox = new PrefCheckBox(getResourceString("prefsCacheActive"));
+        ggCheckBox.setPreferences(prefs, key);
+        b = Box.createHorizontalBox();
+        b.add(ggCheckBox);
+        key = PrefCacheManager.KEY_CAPACITY;
+        key2 = "prefsCacheCapacity";
+        lb = new JLabel(getResourceString(key2) + " [" +
+                getResourceString("labelMegaBytes") + "]", TRAILING);
+        b.add(Box.createHorizontalStrut(16));
+        b.add(lb);
+        ggParam = new PrefParamField();
+        ggParam.addSpace(spcIntegerFromOne);
+        ggParam.setPreferences(prefs, key);
+        b.add(ggParam);
+        tab.gridAdd(b, 1, row, -1, 1);
+
+        row++;
+        key = PrefCacheManager.KEY_FOLDER;
+        key2 = "prefsCacheFolder";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        ggPath = new BasicPathField(PathField.TYPE_FOLDER, getResourceString(key2));
+        ggPath.setPreferences(prefs, key);
+        tab.gridAdd(ggPath, 1, row);
+
+        row++;
+        prefs = app.getUserPrefs();
+        key = PrefsUtil.KEY_REVEAL_FILE;
+        key2 = "prefsRevealCmd";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        ggTextField = new PrefTextField(16);
         ggTextField.setPreferences(prefs, key);
         tab.gridAdd(ggTextField, 1, row);
 
         row++;
-        prefs   = app.getUserPrefs();
-        key		= PrefsUtil.KEY_LAF_TYPE;
-        title	= "Look-and-Feel";
+        prefs = app.getUserPrefs();
+        key = PrefsUtil.KEY_LAF_TYPE;
+        title = "Look-and-Feel";
         ggChoice = new PrefComboBox();
-        ggChoice.addItem(new StringItem(PrefsUtil.VALUE_LAF_TYPE_NATIVE      , "Native"));
-        ggChoice.addItem(new StringItem(PrefsUtil.VALUE_LAF_TYPE_METAL       , "Metal"));
+        ggChoice.addItem(new StringItem(PrefsUtil.VALUE_LAF_TYPE_NATIVE, "Native"));
+        ggChoice.addItem(new StringItem(PrefsUtil.VALUE_LAF_TYPE_METAL, "Metal"));
         ggChoice.addItem(new StringItem(PrefsUtil.VALUE_LAF_TYPE_SUBMIN_LIGHT, "Submin Light"));
-        ggChoice.addItem(new StringItem(PrefsUtil.VALUE_LAF_TYPE_SUBMIN_DARK , "Submin Dark"));
+        ggChoice.addItem(new StringItem(PrefsUtil.VALUE_LAF_TYPE_SUBMIN_DARK, "Submin Dark"));
         ggChoice.setPreferences(prefs, key);
         tab.gridAdd(ggChoice, 1, row, -1, 1);
         ggChoice.addActionListener(new WarnPrefsChange(ggChoice, ggChoice, haveWarned, txtWarnLookAndFeel, title));
 
-        tab.gridAdd( ggChoice, 1, row, -1, 1 );
+        tab.gridAdd(ggChoice, 1, row, -1, 1);
 
         row++;
-        key		= BasicWindowHandler.KEY_LAFDECORATION;
-        key2	= "prefsLAFDecoration";
-        title	= getResourceString( key2 );
-        ggCheckBox  = new PrefCheckBox( title );
-        ggCheckBox.setPreferences( prefs, key );
-        tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
+        key = BasicWindowHandler.KEY_LAFDECORATION;
+        key2 = "prefsLAFDecoration";
+        title = getResourceString(key2);
+        ggCheckBox = new PrefCheckBox(title);
+        ggCheckBox.setPreferences(prefs, key);
+        tab.gridAdd(ggCheckBox, 1, row, -1, 1);
         ggCheckBox.addActionListener(new WarnPrefsChange(ggCheckBox, ggCheckBox, haveWarned, txtWarnLookAndFeel, title));
 
         row++;
-        key		= BasicWindowHandler.KEY_INTERNALFRAMES;
-        key2	= "prefsInternalFrames";
-        title	= getResourceString( key2 );
-        ggCheckBox  = new PrefCheckBox( title );
-        ggCheckBox.setPreferences( prefs, key );
-        tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
-        ggCheckBox.addActionListener( new WarnPrefsChange( ggCheckBox, ggCheckBox, haveWarned, txtWarnLookAndFeel, title ));
+        key = BasicWindowHandler.KEY_INTERNALFRAMES;
+        key2 = "prefsInternalFrames";
+        title = getResourceString(key2);
+        ggCheckBox = new PrefCheckBox(title);
+        ggCheckBox.setPreferences(prefs, key);
+        tab.gridAdd(ggCheckBox, 1, row, -1, 1);
+        ggCheckBox.addActionListener(new WarnPrefsChange(ggCheckBox, ggCheckBox, haveWarned, txtWarnLookAndFeel, title));
 
         row++;
-        key		= CoverGrowBox.KEY_INTRUDINGSIZE;
-        key2	= "prefsIntrudingSize";
-        ggCheckBox  = new PrefCheckBox( getResourceString( key2 ));
-        ggCheckBox.setPreferences( prefs, key );
-        tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
+        key = CoverGrowBox.KEY_INTRUDINGSIZE;
+        key2 = "prefsIntrudingSize";
+        ggCheckBox = new PrefCheckBox(getResourceString(key2));
+        ggCheckBox.setPreferences(prefs, key);
+        tab.gridAdd(ggCheckBox, 1, row, -1, 1);
 
         row++;
-        key		= BasicWindowHandler.KEY_FLOATINGPALETTES;
-        key2	= "prefsFloatingPalettes";
-        ggCheckBox  = new PrefCheckBox( getResourceString( key2 ));
-        ggCheckBox.setPreferences( prefs, key );
-        tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
-        ggCheckBox.addActionListener( new WarnPrefsChange( ggCheckBox, ggCheckBox, haveWarned, txtWarnLookAndFeel, title ));
+        key = BasicWindowHandler.KEY_FLOATINGPALETTES;
+        key2 = "prefsFloatingPalettes";
+        ggCheckBox = new PrefCheckBox(getResourceString(key2));
+        ggCheckBox.setPreferences(prefs, key);
+        tab.gridAdd(ggCheckBox, 1, row, -1, 1);
+        ggCheckBox.addActionListener(new WarnPrefsChange(ggCheckBox, ggCheckBox, haveWarned, txtWarnLookAndFeel, title));
 
-//		row++;
-//  	prefs   = GUIUtil.getUserPrefs();
-//		key2	= "prefsKeyStrokeHelp";
-//		lb		= new JLabel( getResourceString( key2 ), JLabel.TRAILING );
-//		tab.gridAdd( lb, 0, row );
-//		ggKeyStroke = new KeyStrokeTextField();
-//		ggKeyStroke.setPreferences( prefs, key );
-//		tab.gridAdd( ggKeyStroke, 1, row, -1, 1 );
-
-        addTab( ggTabPane, tab, "prefsGeneral");
+        addTab(ggTabPane, tab, "prefsGeneral");
 
         // ---------- audio pane ----------
 
-        prefs   = app.getUserPrefs().node( PrefsUtil.NODE_AUDIO );
-        audioPrefs	= prefs;
-        abPrefs	= audioPrefs.node( PrefsUtil.NODE_AUDIOBOXES );
-        tab		= createTab();
+        prefs = app.getUserPrefs().node(PrefsUtil.NODE_AUDIO);
+        audioPrefs = prefs;
+        abPrefs = audioPrefs.node(PrefsUtil.NODE_AUDIOBOXES);
+        tab = createTab();
 
-        row		= 0;
-        key		= PrefsUtil.KEY_SUPERCOLLIDERAPP;
-        key2	= "prefsSuperColliderApp";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        ggPath = new BasicPathField( PathField.TYPE_INPUTFILE, getResourceString( key2 ));
-        ggPath.setPreferences( prefs, key );
-//		HelpGlassPane.setHelp( ggPath, key2 );
-        tab.gridAdd( ggPath, 1, row );
-
-//		row++;
-//		key		= PrefsUtil.KEY_SUPERCOLLIDEROSC;
-//		key2	= "prefsSuperColliderOSC";
-//		lb		= new JLabel( getResourceString( key2 ), JLabel.TRAILING );
-//		tab.gridAdd( lb, 0, row );
-//		ggText  = new PrefTextField( 32 );
-//		ggText.setPreferences( prefs, key );
-//		tab.gridAdd( ggText, 1, row, -1, 1 );
+        row = 0;
+        key = PrefsUtil.KEY_SUPERCOLLIDERAPP;
+        key2 = "prefsSuperColliderApp";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        ggPath = new BasicPathField(PathField.TYPE_INPUTFILE, getResourceString(key2));
+        ggPath.setPreferences(prefs, key);
+        tab.gridAdd(ggPath, 1, row);
 
         row++;
-        key		= PrefsUtil.KEY_AUTOBOOT;
-        key2	= "prefsAutoBoot";
- //		lb		= new JLabel( getResourceString( key2 ), JLabel.TRAILING );
- //		tab.gridAdd( lb, 0, row );
-        ggCheckBox  = new PrefCheckBox( getResourceString( key2 ));
-        ggCheckBox.setPreferences( prefs, key );
- //		HelpGlassPane.setHelp( ggCheckBox, key2 );
-        tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
+        key = PrefsUtil.KEY_AUTOBOOT;
+        key2 = "prefsAutoBoot";
+        ggCheckBox = new PrefCheckBox(getResourceString(key2));
+        ggCheckBox.setPreferences(prefs, key);
+        tab.gridAdd(ggCheckBox, 1, row, -1, 1);
 
         row++;
-        key		= PrefsUtil.KEY_AUTOPLAYFROMFINDER;
-        key2	= "prefsAutoPlayFromFinder";
-        lb		= new JLabel( getResourceString( key2 ), JLabel.TRAILING );
-        tab.gridAdd( lb, 0, row );
+        key = PrefsUtil.KEY_AUTOPLAYFROMFINDER;
+        key2 = "prefsAutoPlayFromFinder";
+        lb = new JLabel(getResourceString(key2), JLabel.TRAILING);
+        tab.gridAdd(lb, 0, row);
         ggChoice = new PrefComboBox();
-        ggChoice.addItem( new StringItem( PrefsUtil.AUTOPLAYFROMFINDER_NONE, getResourceString( key2 + "." + PrefsUtil.AUTOPLAYFROMFINDER_NONE )));
-        ggChoice.addItem( new StringItem( PrefsUtil.AUTOPLAYFROMFINDER_PLAY, getResourceString( key2 + "." + PrefsUtil.AUTOPLAYFROMFINDER_PLAY )));
-        ggChoice.addItem( new StringItem( PrefsUtil.AUTOPLAYFROMFINDER_LOOP, getResourceString( key2 + "." + PrefsUtil.AUTOPLAYFROMFINDER_LOOP )));
-        ggChoice.setPreferences( prefs, key );
-        tab.gridAdd( ggChoice, 1, row, -1, 1 );
+        ggChoice.addItem(new StringItem(PrefsUtil.AUTOPLAYFROMFINDER_NONE, getResourceString(key2 + "." + PrefsUtil.AUTOPLAYFROMFINDER_NONE)));
+        ggChoice.addItem(new StringItem(PrefsUtil.AUTOPLAYFROMFINDER_PLAY, getResourceString(key2 + "." + PrefsUtil.AUTOPLAYFROMFINDER_PLAY)));
+        ggChoice.addItem(new StringItem(PrefsUtil.AUTOPLAYFROMFINDER_LOOP, getResourceString(key2 + "." + PrefsUtil.AUTOPLAYFROMFINDER_LOOP)));
+        ggChoice.setPreferences(prefs, key);
+        tab.gridAdd(ggChoice, 1, row, -1, 1);
 
         row++;
-        lb		= new JLabel( getResourceString( "labelAudioIFs" ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        tab.gridAdd( createAudioBoxGUI(), 1, row, 1, -1 );
+        lb = new JLabel(getResourceString("labelAudioIFs"), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        tab.gridAdd(createAudioBoxGUI(), 1, row, 1, -1);
 
         row++;
-        key		= PrefsUtil.KEY_AUDIORATE;
-        key2	= "prefsAudioRate";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        ggParam  = new PrefParamField();
-        ggParam.addSpace( ParamSpace.spcFreqHertz );
+        key = PrefsUtil.KEY_AUDIORATE;
+        key2 = "prefsAudioRate";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        ggParam = new PrefParamField();
+        ggParam.addSpace(ParamSpace.spcFreqHertz);
         ggCombo = new JComboBox();
         for (StringItem RATE_ITEM : RATE_ITEMS) {
             ggCombo.addItem(RATE_ITEM);
         }
-        ggParam.setBorder( new ComboBoxEditorBorder() );
-        ggCombo.setEditor( ggParam );
-        ggCombo.setEditable( true );
-        ggParam.setPreferences( prefs, key ); // important to be _afer_ setEditor because otherwise prefs get overwritten!
-//		ggCombo.setSelectedIndex( 0 ); // DEFAULT_RATE
-//ggParam.setPreferredSize( new Dimension( ggParam.getPreferredSize().width, Math.max( 24, ggParam.getPreferredSize().height )));
-//ggCombo.setPreferredSize( new Dimension( ggCombo.getPreferredSize().width, Math.max( 24, ggCombo.getPreferredSize().height )));
-        tab.gridAdd( ggCombo, 1, row, -1, 1 );
+        ggParam.setBorder(new ComboBoxEditorBorder());
+        ggCombo.setEditor(ggParam);
+        ggCombo.setEditable(true);
+        ggParam.setPreferences(prefs, key); // important to be _afer_ setEditor because otherwise prefs get overwritten!
+        tab.gridAdd(ggCombo, 1, row, -1, 1);
 
         row++;
-        b  = Box.createHorizontalBox();
-        b.add( Box.createHorizontalGlue() );
-        ggTreeAudio	= new TreeExpanderButton();
-        b.add( ggTreeAudio );
-        b.add( new JLabel( getResourceString( "prefsAdvanced" )));
-        tab.gridAdd( b, 0, row );
+        b = Box.createHorizontalBox();
+        b.add(Box.createHorizontalGlue());
+        ggTreeAudio = new TreeExpanderButton();
+        b.add(ggTreeAudio);
+        b.add(new JLabel(getResourceString("prefsAdvanced")));
+        tab.gridAdd(b, 0, row);
 
         collAudioAdvanced = new ArrayList<JComponent>();
 
         row++;
-        key2	= "prefsSuperColliderOSC";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        lb.setVisible( false );
-        collAudioAdvanced.add( lb );
-        tab.gridAdd( lb, 0, row );
-        key		= PrefsUtil.KEY_SCPROTOCOL;
-        key2	= "prefsOSCProtocol";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        b		= Box.createHorizontalBox();
-        b.add( Box.createHorizontalStrut( 4 ));
-        b.add( lb );
+        key2 = "prefsSuperColliderOSC";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        lb.setVisible(false);
+        collAudioAdvanced.add(lb);
+        tab.gridAdd(lb, 0, row);
+        key = PrefsUtil.KEY_SCPROTOCOL;
+        key2 = "prefsOSCProtocol";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        b = Box.createHorizontalBox();
+        b.add(Box.createHorizontalStrut(4));
+        b.add(lb);
         ggChoice = new PrefComboBox();
         ggChoice.addItem(new StringItem(OSCChannel.TCP, "TCP"));
         ggChoice.addItem(new StringItem(OSCChannel.UDP, "UDP"));
         ggChoice.setPreferences(prefs, key);
         b.add(ggChoice);
 
-        key		= PrefsUtil.KEY_SCPORT;
-        key2	= "prefsOSCPort";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        b.add( Box.createHorizontalStrut( 16 ));
-        b.add( lb );
-        ggParam  = new PrefParamField();
-        ggParam.addSpace( spcIntegerFromZero );
-        ggParam.setPreferences( prefs, key );
-        b.add( ggParam );
-        b.setVisible( false );
-        collAudioAdvanced.add( b );
-        tab.gridAdd( b, 1, row, -1, 1 );
+        key = PrefsUtil.KEY_SCPORT;
+        key2 = "prefsOSCPort";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        b.add(Box.createHorizontalStrut(16));
+        b.add(lb);
+        ggParam = new PrefParamField();
+        ggParam.addSpace(spcIntegerFromZero);
+        ggParam.setPreferences(prefs, key);
+        b.add(ggParam);
+        b.setVisible(false);
+        collAudioAdvanced.add(b);
+        tab.gridAdd(b, 1, row, -1, 1);
 
         row++;
-        key		= PrefsUtil.KEY_SCBLOCKSIZE;
-        key2	= "prefsSCBlockSize";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        lb.setVisible( false );
-        collAudioAdvanced.add( lb );
-        tab.gridAdd( lb, 0, row );
-        ggParam  = new PrefParamField();
-        ggParam.addSpace( spcIntegerFromOne );
-        ggParam.setPreferences( prefs, key );
-        ggParam.setVisible( false );
-        collAudioAdvanced.add( ggParam );
-        tab.gridAdd( ggParam, 1, row, -1, 1 );
+        key = PrefsUtil.KEY_SCBLOCKSIZE;
+        key2 = "prefsSCBlockSize";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        lb.setVisible(false);
+        collAudioAdvanced.add(lb);
+        tab.gridAdd(lb, 0, row);
+        ggParam = new PrefParamField();
+        ggParam.addSpace(spcIntegerFromOne);
+        ggParam.setPreferences(prefs, key);
+        ggParam.setVisible(false);
+        collAudioAdvanced.add(ggParam);
+        tab.gridAdd(ggParam, 1, row, -1, 1);
 
         row++;
-        key		= PrefsUtil.KEY_AUDIOBUSSES;
-        key2	= "prefsAudioBuses";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        lb.setVisible( false );
-        collAudioAdvanced.add( lb );
-        tab.gridAdd( lb, 0, row );
-        ggParam  = new PrefParamField();
-        ggParam.addSpace( spcIntegerFromOne );
-        ggParam.setPreferences( prefs, key );
-        ggParam.setVisible( false );
-        collAudioAdvanced.add( ggParam );
-        tab.gridAdd( ggParam, 1, row, -1, 1 );
+        key = PrefsUtil.KEY_AUDIOBUSSES;
+        key2 = "prefsAudioBuses";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        lb.setVisible(false);
+        collAudioAdvanced.add(lb);
+        tab.gridAdd(lb, 0, row);
+        ggParam = new PrefParamField();
+        ggParam.addSpace(spcIntegerFromOne);
+        ggParam.setPreferences(prefs, key);
+        ggParam.setVisible(false);
+        collAudioAdvanced.add(ggParam);
+        tab.gridAdd(ggParam, 1, row, -1, 1);
 
         row++;
-        key		= PrefsUtil.KEY_SCMEMSIZE;
-        key2	= "prefsSCMemSize";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        lb.setVisible( false );
-        collAudioAdvanced.add( lb );
-        tab.gridAdd( lb, 0, row );
-        ggParam  = new PrefParamField();
-        ggParam.addSpace( spcIntegerFromOne );
-        ggParam.setPreferences( prefs, key );
-        ggParam.setVisible( false );
-        collAudioAdvanced.add( ggParam );
-        tab.gridAdd( ggParam, 1, row, -1, 1 );
+        key = PrefsUtil.KEY_SCMEMSIZE;
+        key2 = "prefsSCMemSize";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        lb.setVisible(false);
+        collAudioAdvanced.add(lb);
+        tab.gridAdd(lb, 0, row);
+        ggParam = new PrefParamField();
+        ggParam.addSpace(spcIntegerFromOne);
+        ggParam.setPreferences(prefs, key);
+        ggParam.setVisible(false);
+        collAudioAdvanced.add(ggParam);
+        tab.gridAdd(ggParam, 1, row, -1, 1);
 
         row++;
-        key		= PrefsUtil.KEY_SCRENDEZVOUS;
-        key2	= "prefsSCRendezvous";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        lb.setVisible( false );
-        collAudioAdvanced.add( lb );
-        tab.gridAdd( lb, 0, row );
-        ggCheckBox  = new PrefCheckBox();
-        ggCheckBox.setPreferences( prefs, key );
-        ggCheckBox.setVisible( false );
-        collAudioAdvanced.add( ggCheckBox );
-        tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
+        key = PrefsUtil.KEY_SCRENDEZVOUS;
+        key2 = "prefsSCRendezvous";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        lb.setVisible(false);
+        collAudioAdvanced.add(lb);
+        tab.gridAdd(lb, 0, row);
+        ggCheckBox = new PrefCheckBox();
+        ggCheckBox.setPreferences(prefs, key);
+        ggCheckBox.setVisible(false);
+        collAudioAdvanced.add(ggCheckBox);
+        tab.gridAdd(ggCheckBox, 1, row, -1, 1);
 
-final SpringPanel tabAudio = tab;
-        ggTreeAudio.addActionListener( new ActionListener() {
-            public void actionPerformed( ActionEvent e )
-            {
-                final int		width	= getWindow().getWidth();
-                final int		height	= getWindow().getHeight();
-                final boolean	visible	= ggTreeAudio.isExpanded();
-                int				delta	= 0;
-                int				d2;
+        final SpringPanel tabAudio = tab;
+        ggTreeAudio.addActionListener(new ActionListener() {
+            public void actionPerformed(ActionEvent e) {
+                final int width         = getWindow().getWidth();
+                final int height        = getWindow().getHeight();
+                final boolean visible   = ggTreeAudio.isExpanded();
+                int delta = 0;
+                int d2;
 
-                for( int i = 0; i < collAudioAdvanced.size(); ) {
+                for (int i = 0; i < collAudioAdvanced.size(); ) {
                     d2 = 0;
-                    for( int j = i + 2; i < j; i++ ) {
-                        d2 = Math.max( d2, collAudioAdvanced.get( i ).getPreferredSize().height );
+                    for (int j = i + 2; i < j; i++) {
+                        d2 = Math.max(d2, collAudioAdvanced.get(i).getPreferredSize().height);
                     }
                     delta = delta + d2 + 2;
                 }
@@ -450,131 +420,120 @@ final SpringPanel tabAudio = tab;
                     aCollAudioAdvanced.setVisible(visible);
                 }
                 tabAudio.makeCompactGrid();
-                getWindow().setSize( width, height + (visible ? delta : -delta ));
+                getWindow().setSize(width, height + (visible ? delta : -delta));
             }
         });
 
-        addTab( ggTabPane, tab, "prefsAudio" );
+        addTab(ggTabPane, tab, "prefsAudio");
 
         // ---------- osc pane ----------
 
-        tab		= createTab();
+        tab = createTab();
 
-        row		= 0;
-        osc		= OSCRoot.getInstance();
-        prefs   = osc.getPreferences();
-        key		= OSCRoot.KEY_ACTIVE;
-//		key2	= "prefsOSCActive";
-        key2	= "prefsOSCServer";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        b		= Box.createHorizontalBox();
-        ggCheckBox = new PrefCheckBox( getResourceString( "prefsOSCActive" ));
-        ggCheckBox.setPreferences( prefs, key );
-//		tab.gridAdd( ggCheckBox, 1, row, -1, 1 );
-        b.add( ggCheckBox );
+        row = 0;
+        osc = OSCRoot.getInstance();
+        prefs = osc.getPreferences();
+        key = OSCRoot.KEY_ACTIVE;
+        key2 = "prefsOSCServer";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        b = Box.createHorizontalBox();
+        ggCheckBox = new PrefCheckBox(getResourceString("prefsOSCActive"));
+        ggCheckBox.setPreferences(prefs, key);
+        b.add(ggCheckBox);
 
-        key		= OSCRoot.KEY_PROTOCOL;
-        key2	= "prefsOSCProtocol";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-//		tab.gridAdd( lb, 2, row );
-        b.add( Box.createHorizontalStrut( 16 ));
-        b.add( lb );
+        key = OSCRoot.KEY_PROTOCOL;
+        key2 = "prefsOSCProtocol";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        b.add(Box.createHorizontalStrut(16));
+        b.add(lb);
         ggChoice = new PrefComboBox();
-        ggChoice.addItem( new StringItem( OSCChannel.TCP, "TCP" ));
-        ggChoice.addItem( new StringItem( OSCChannel.UDP, "UDP" ));
-        ggChoice.setPreferences( prefs, key );
-//		tab.gridAdd( ggChoice, 3, row, -1, 1 );
-        b.add( ggChoice );
+        ggChoice.addItem(new StringItem(OSCChannel.TCP, "TCP"));
+        ggChoice.addItem(new StringItem(OSCChannel.UDP, "UDP"));
+        ggChoice.setPreferences(prefs, key);
+        b.add(ggChoice);
 
-        key		= OSCRoot.KEY_PORT;
-        key2	= "prefsOSCPort";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-//		tab.gridAdd( lb, 4, row );
-        b.add( Box.createHorizontalStrut( 16 ));
-        b.add( lb );
-        ggParam  = new PrefParamField();
-        ggParam.addSpace( spcIntegerFromZero );
-        ggParam.setPreferences( prefs, key );
-//		tab.gridAdd( ggParam, 5, row, -1, 1 );
-        b.add( ggParam );
-        tab.gridAdd( b, 1, row, -1, 1 );
+        key = OSCRoot.KEY_PORT;
+        key2 = "prefsOSCPort";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        b.add(Box.createHorizontalStrut(16));
+        b.add(lb);
+        ggParam = new PrefParamField();
+        ggParam.addSpace(spcIntegerFromZero);
+        ggParam.setPreferences(prefs, key);
+        b.add(ggParam);
+        tab.gridAdd(b, 1, row, -1, 1);
 
         row++;
-        key		= OSCGUI.KEY_SWINGAPP;
-        key2	= "prefsOSCSwingApp";
-        lb		= new JLabel( getResourceString( key2 ), TRAILING );
-        tab.gridAdd( lb, 0, row );
-        ggPath = new BasicPathField( PathField.TYPE_INPUTFILE, getResourceString( key2 ));
-        ggPath.setPreferences( prefs, key );
-        tab.gridAdd( ggPath, 1, row );
+        key = OSCGUI.KEY_SWINGAPP;
+        key2 = "prefsOSCSwingApp";
+        lb = new JLabel(getResourceString(key2), TRAILING);
+        tab.gridAdd(lb, 0, row);
+        ggPath = new BasicPathField(PathField.TYPE_INPUTFILE, getResourceString(key2));
+        ggPath.setPreferences(prefs, key);
+        tab.gridAdd(ggPath, 1, row);
 
-        addTab( ggTabPane, tab, "prefsOSC" );
+        addTab(ggTabPane, tab, "prefsOSC");
 
         // ---------- view pane ----------
 
-        prefs   = app.getUserPrefs().node( PrefsUtil.NODE_VIEW );
-        tab		= createTab();
+        prefs = app.getUserPrefs().node(PrefsUtil.NODE_VIEW);
+        tab = createTab();
 
-        row		= 0;
-        key		= PrefsUtil.KEY_SONAENABLED;
-//		lb		= new JLabel( "Enable Sonagramme Option (Experimental!)", TRAILING );
-//		tab.gridAdd( lb, 0, row );
-        ggCheckBox = new PrefCheckBox( "Enable Sonagramme Option (Experimental!)" );
-        ggCheckBox.setPreferences( prefs, key );
-        tab.gridAdd( ggCheckBox, 0, row, 2, 1 );
+        row = 0;
+        key = PrefsUtil.KEY_SONAENABLED;
+        ggCheckBox = new PrefCheckBox("Enable Sonagramme Option (Experimental!)");
+        ggCheckBox.setPreferences(prefs, key);
+        tab.gridAdd(ggCheckBox, 0, row, 2, 1);
 
         row++;
-        tab.gridAdd( new JLabel( " " ), 0, row );
+        tab.gridAdd(new JLabel(" "), 0, row);
 
         row++;
-        key		= PrefsUtil.NODE_SONAGRAM;
-        key2	= "prefsSonoSettings";
-        lb		= new JLabel( getResourceString( key2 ), CENTER );
-        tab.gridAdd( lb, 0, row, 2, 1 );
+        key = PrefsUtil.NODE_SONAGRAM;
+        key2 = "prefsSonoSettings";
+        lb = new JLabel(getResourceString(key2), CENTER);
+        tab.gridAdd(lb, 0, row, 2, 1);
         row++;
         final ConstQPane prefConstQ = new ConstQPane();
-        prefConstQ.setPreferences( prefs.node( key ));
-        tab.gridAdd( prefConstQ, 0, row, -1, 1 );
+        prefConstQ.setPreferences(prefs.node(key));
+        tab.gridAdd(prefConstQ, 0, row, -1, 1);
 
-        addTab( ggTabPane, tab, "prefsView" );
+        addTab(ggTabPane, tab, "prefsView");
 
         // ---------- generic gadgets ----------
 
-        cp.add( ggTabPane, BorderLayout.CENTER );
-//		AbstractWindowHandler.setDeepFont( cp );
+        cp.add(ggTabPane, BorderLayout.CENTER);
 
         // ---------- listeners ----------
 
-        addListener( new AbstractWindow.Adapter() {
-            public void windowClosing( AbstractWindow.Event e )
-            {
-                setVisible( false );
+        addListener(new AbstractWindow.Adapter() {
+            public void windowClosing(AbstractWindow.Event e) {
+                setVisible(false);
                 dispose();
             }
         });
 
-        setDefaultCloseOperation( WindowConstants.DO_NOTHING_ON_CLOSE );
+        setDefaultCloseOperation(WindowConstants.DO_NOTHING_ON_CLOSE);
         init();
-        app.addComponent( Main.COMP_PREFS, this );
+        app.addComponent(Main.COMP_PREFS, this);
     }
     
     private SpringPanel createTab()
     {
         return new SpringPanel( 2, 1, 4, 2 );
     }
-    
-    private void addTab( JTabbedPane ggTabPane, SpringPanel tab, String key )
-    {
+
+    private void addTab(JTabbedPane ggTabPane, SpringPanel tab, String key) {
         final JPanel tabWrap, p;
 
         tab.makeCompactGrid();
-        tabWrap = new JPanel( new BorderLayout() );
-        tabWrap.add( tab, BorderLayout.NORTH );
-        p		= new JPanel( new FlowLayout( FlowLayout.RIGHT ));
-        p.add( new HelpButton( key ));
-        tabWrap.add( p, BorderLayout.SOUTH );
-        ggTabPane.addTab( getResourceString( key ), null, tabWrap, null );
+        tabWrap = new JPanel(new BorderLayout());
+        tabWrap.add(tab, BorderLayout.NORTH);
+        p = new JPanel(new FlowLayout(FlowLayout.RIGHT));
+        p.add(new HelpButton(key));
+        tabWrap.add(p, BorderLayout.SOUTH);
+        ggTabPane.addTab(getResourceString(key), null, tabWrap, null);
     }
 
     protected boolean autoUpdatePrefs()
@@ -582,35 +541,33 @@ final SpringPanel tabAudio = tab;
         return true;
     }
 
-    public void dispose()
-    {
-        AbstractApplication.getApplication().removeComponent( Main.COMP_PREFS );
+    public void dispose() {
+        AbstractApplication.getApplication().removeComponent(Main.COMP_PREFS);
         super.dispose();
     }
 
-    protected static String getResourceString( String key )
-    {
-        return AbstractApplication.getApplication().getResourceString( key );
+    protected static String getResourceString(String key) {
+        return AbstractApplication.getApplication().getResourceString(key);
     }
 
     private JComponent createAudioBoxGUI() {
-        final JScrollPane			ggScroll;
-        final Box					b;
-        final ModificationButton	ggPlus, ggMinus;
-        final JTable				table;
-        final JPanel				p;
-        final JTableHeader			th;
-        final SortedTableModel		stm;
+        final JScrollPane ggScroll;
+        final Box b;
+        final ModificationButton ggPlus, ggMinus;
+        final JTable table;
+        final JPanel p;
+        final JTableHeader th;
+        final SortedTableModel stm;
 
         audioBoxesFromPrefs();
 
-        p			= new JPanel( new BorderLayout() );
+        p = new JPanel(new BorderLayout());
 
-        abtm		= new AudioBoxTableModel();
-        stm			= new SortedTableModel( abtm );
-        table		= new JTable( stm );
-        th			= table.getTableHeader();
-        stm.setTableHeader( th );
+        abtm = new AudioBoxTableModel();
+        stm = new SortedTableModel(abtm);
+        table = new JTable(stm);
+        th = table.getTableHeader();
+        stm.setTableHeader(th);
         th.setReorderingAllowed(false);
         th.setResizingAllowed(true);
         table.setCellSelectionEnabled(true);
@@ -620,18 +577,17 @@ final SpringPanel tabAudio = tab;
         table.setPreferredScrollableViewportSize(new Dimension(256, 64)); // XXX
         for (int i = 0; i < 4; i++) table.getColumnModel().getColumn(i).setPreferredWidth(i == 0 ? 180 : 60);
 
-        stm.setSortedColumn( 0, SortedTableModel.ASCENDING );
+        stm.setSortedColumn(0, SortedTableModel.ASCENDING);
 
-        ggScroll	= new JScrollPane( table, ScrollPaneConstants.VERTICAL_SCROLLBAR_ALWAYS,
-                                              ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER );
+        ggScroll = new JScrollPane(table, ScrollPaneConstants.VERTICAL_SCROLLBAR_ALWAYS,
+                ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
 
-        b			= Box.createHorizontalBox();
-        ggPlus		= new ModificationButton( ModificationButton.SHAPE_PLUS );
-        ggMinus		= new ModificationButton( ModificationButton.SHAPE_MINUS );
-        ggMinus.setEnabled( false );
-        ggPlus.addActionListener( new ActionListener() {
-            public void actionPerformed( ActionEvent e )
-            {
+        b = Box.createHorizontalBox();
+        ggPlus = new ModificationButton(ModificationButton.SHAPE_PLUS);
+        ggMinus = new ModificationButton(ModificationButton.SHAPE_MINUS);
+        ggMinus.setEnabled(false);
+        ggPlus.addActionListener(new ActionListener() {
+            public void actionPerformed(ActionEvent e) {
                 final int modelIndex = collAudioBoxConfigs.size();
                 final int viewIndex;
                 final AudioBoxConfig cfg = createUniqueAudioBox();
@@ -642,29 +598,27 @@ final SpringPanel tabAudio = tab;
                 triggerCtrlRoomRefill();
             }
         });
-        ggMinus.addActionListener( new ActionListener() {
-            public void actionPerformed( ActionEvent e )
-            {
-                final int firstRow	= Math.max( 0, table.getSelectedRow() );
-                final int lastRow	= Math.min( table.getRowCount(), firstRow + table.getSelectedRowCount() ) - 1;
+        ggMinus.addActionListener(new ActionListener() {
+            public void actionPerformed(ActionEvent e) {
+                final int firstRow = Math.max(0, table.getSelectedRow());
+                final int lastRow = Math.min(table.getRowCount(), firstRow + table.getSelectedRowCount()) - 1;
                 AudioBoxConfig cfg;
                 final int[] modelIndices;
 
-                if( firstRow <= lastRow ) {
-                    modelIndices = new int[ lastRow - firstRow + 1 ];
-                    for( int i = 0, viewIndex = firstRow; viewIndex <= lastRow; i++, viewIndex++ ) {
-                        modelIndices[ i ] = stm.getModelIndex( viewIndex );
+                if (firstRow <= lastRow) {
+                    modelIndices = new int[lastRow - firstRow + 1];
+                    for (int i = 0, viewIndex = firstRow; viewIndex <= lastRow; i++, viewIndex++) {
+                        modelIndices[i] = stm.getModelIndex(viewIndex);
                     }
-                    Arrays.sort( modelIndices );
+                    Arrays.sort(modelIndices);
 
                     try {
-                        for( int i = modelIndices.length - 1; i >= 0; i-- ) {
-                            cfg = collAudioBoxConfigs.get( modelIndices[ i ]);
-                            removeAudioBox( cfg );
+                        for (int i = modelIndices.length - 1; i >= 0; i--) {
+                            cfg = collAudioBoxConfigs.get(modelIndices[i]);
+                            removeAudioBox(cfg);
                         }
-                    }
-                    catch( BackingStoreException e1 ) {
-                        BasicWindowHandler.showErrorDialog( getWindow(), e1, getResourceString( "errSavePrefs" ));
+                    } catch (BackingStoreException e1) {
+                        BasicWindowHandler.showErrorDialog(getWindow(), e1, getResourceString("errSavePrefs"));
                     } finally {
                         abtm.fireTableDataChanged();
                         triggerCtrlRoomRefill();
@@ -690,10 +644,9 @@ final SpringPanel tabAudio = tab;
         return p;
     }
 
-    protected void triggerCtrlRoomRefill()
-    {
-        final ControlRoomFrame f = (ControlRoomFrame) AbstractApplication.getApplication().getComponent( Main.COMP_CTRLROOM );
-        if( f != null ) f.refillAudioBoxes();
+    protected void triggerCtrlRoomRefill() {
+        final ControlRoomFrame f = (ControlRoomFrame) AbstractApplication.getApplication().getComponent(Main.COMP_CTRLROOM);
+        if (f != null) f.refillAudioBoxes();
     }
 
     protected void addAudioBox(AudioBoxConfig cfg) {
@@ -703,117 +656,103 @@ final SpringPanel tabAudio = tab;
         setAudioBoxNames.add(cfg.name);
     }
 
-    protected void removeAudioBox( AudioBoxConfig cfg )
-    throws BackingStoreException
-    {
-        abPrefs.node( cfg.id ).removeNode();
-        collAudioBoxConfigs.remove( cfg );
-        setAudioBoxIDs.remove( cfg.id );
-        setAudioBoxNames.remove( cfg.name );
+    protected void removeAudioBox(AudioBoxConfig cfg)
+            throws BackingStoreException {
+
+        abPrefs.node(cfg.id).removeNode();
+        collAudioBoxConfigs.remove(cfg);
+        setAudioBoxIDs.remove(cfg.id);
+        setAudioBoxNames.remove(cfg.name);
     }
 
-    private void changeAudioBoxActivity( AudioBoxConfig cfg, boolean newActive )
-    throws BackingStoreException
-    {
+    private void changeAudioBoxActivity(AudioBoxConfig cfg, boolean newActive)
+            throws BackingStoreException {
+
         final int idx;
         final AudioBoxConfig newCfg;
 
-        idx = collAudioBoxConfigs.indexOf( cfg );
-        newCfg = cfg.changeActive( newActive );
-        newCfg.toPrefs( abPrefs.node( newCfg.id ));
-        collAudioBoxConfigs.set( idx, newCfg );
+        idx = collAudioBoxConfigs.indexOf(cfg);
+        newCfg = cfg.changeActive(newActive);
+        newCfg.toPrefs(abPrefs.node(newCfg.id));
+        collAudioBoxConfigs.set(idx, newCfg);
     }
 
     protected void showAudioBoxAssistant() {
-        final String				scsynthPath;
-        final Flag					keepThreadRunning	= new Flag( true );
-        final Flag					threadRunning		= new Flag( true );
-        final JPanel				pane;
-        final SpringPanel			pane2;
-        final Thread				testThread;
-        final Runnable				runResult;
-        final IndeterminateSpinner	ggSpinner;
-        final JLabel				ggLabel;
-        final JList					ggListAdd, ggListActivate, ggListRemove;
-        final Box					b;
-        final JComboBox				ggComboAdd, ggComboActivate, ggComboRemove;
-        final int					result;
-        JScrollPane					ggScroll;
-//		JSeparator					ggSep;
-        int							row, action;
-        AudioBoxConfig				cfg;
+        final Flag keepThreadRunning    = new Flag(true);
+        final Flag threadRunning        = new Flag(true);
 
-        final List<AudioBoxConfig> collDetected	= Collections.synchronizedList( new ArrayList<AudioBoxConfig>() );
-        final List<AudioBoxConfig> collAdd				= new ArrayList<AudioBoxConfig>();
-        final List<AudioBoxConfig> collActivate		= new ArrayList<AudioBoxConfig>();
-        final List<AudioBoxConfig> collRemove			= new ArrayList<AudioBoxConfig>();
+        final String scsynthPath;
+        final JPanel pane;
+        final SpringPanel pane2;
+        final Thread testThread;
+        final Runnable runResult;
+        final IndeterminateSpinner ggSpinner;
+        final JLabel ggLabel;
+        final JList ggListAdd, ggListActivate, ggListRemove;
+        final Box b;
+        final JComboBox ggComboAdd, ggComboActivate, ggComboRemove;
+        final int result;
+        JScrollPane ggScroll;
+        int row, action;
+        AudioBoxConfig cfg;
+
+        final List<AudioBoxConfig> collDetected = Collections.synchronizedList(new ArrayList<AudioBoxConfig>());
+        final List<AudioBoxConfig> collAdd      = new ArrayList<AudioBoxConfig>();
+        final List<AudioBoxConfig> collActivate = new ArrayList<AudioBoxConfig>();
+        final List<AudioBoxConfig> collRemove   = new ArrayList<AudioBoxConfig>();
 
         // this doesn't show up obviously, so we add it manually...
-        collDetected.add( new AudioBoxConfig( AudioBoxConfig.ID_DEFAULT, "Default", 8, 8, true ));
+        collDetected.add(new AudioBoxConfig(AudioBoxConfig.ID_DEFAULT, "Default", 8, 8, true));
 
-        scsynthPath = audioPrefs.get( PrefsUtil.KEY_SUPERCOLLIDERAPP, null );
-        if( scsynthPath == null ) {
-            System.err.println( getResourceString( "errSCSynthAppNotFound" ));
+        scsynthPath = audioPrefs.get(PrefsUtil.KEY_SUPERCOLLIDERAPP, null);
+        if (scsynthPath == null) {
+            System.err.println(getResourceString("errSCSynthAppNotFound"));
             return;
         }
 
-        pane = new JPanel( new BorderLayout() );
-//pane.setBackground( Color.white );
-        ggSpinner = new IndeterminateSpinner( 24 );
+        pane = new JPanel(new BorderLayout());
+        ggSpinner = new IndeterminateSpinner(24);
         b = Box.createHorizontalBox();
-//		pane.gridAdd( ggSpinner, 0, 0 );
-        b.add( ggSpinner );
-        b.add( Box.createHorizontalStrut( 4 ));
-        ggLabel = new JLabel( "Searching for Audio Devices..." );
-//		ggLabel.setBorder( BorderFactory.createEmptyBorder( 0, 4, 0, 0 ));
-//		pane.gridAdd( ggLabel, 1, 0 );
-        b.add( ggLabel );
-        pane.add( b, BorderLayout.NORTH );
+        b.add(ggSpinner);
+        b.add(Box.createHorizontalStrut(4));
+        ggLabel = new JLabel("Searching for Audio Devices...");
+        b.add(ggLabel);
+        pane.add(b, BorderLayout.NORTH);
 
-        pane2 = new SpringPanel( 0, 0, 4, 2 );
+        pane2 = new SpringPanel(0, 0, 4, 2);
         row = 0;
         ggListAdd = new JList();
-        ggScroll = new JScrollPane( ggListAdd );
-        pane2.gridAdd( new JLabel( "Detected new devices:" ), 0, row++, 2, 1 );
-        pane2.gridAdd( ggScroll, 0, row++, 2, 1 );
-        pane2.gridAdd( new JLabel( "Action:", RIGHT ), 0, row );
-        ggComboAdd = new JComboBox( new Object[] { "Ignore", "Add to list" });
-        pane2.gridAdd( ggComboAdd, 1, row++ );
-        pane2.gridAdd( createVSep(), 0, row++, 2, 1 );
+        ggScroll = new JScrollPane(ggListAdd);
+        pane2.gridAdd(new JLabel("Detected new devices:"), 0, row++, 2, 1);
+        pane2.gridAdd(ggScroll, 0, row++, 2, 1);
+        pane2.gridAdd(new JLabel("Action:", RIGHT), 0, row);
+        ggComboAdd = new JComboBox(new Object[]{"Ignore", "Add to list"});
+        pane2.gridAdd(ggComboAdd, 1, row++);
+        pane2.gridAdd(createVSep(), 0, row++, 2, 1);
 
         ggListActivate = new JList();
-        ggScroll = new JScrollPane( ggListActivate );
-        pane2.gridAdd( new JLabel( "Detected deactivated devices:" ), 0, row++, 2, 1 );
-        pane2.gridAdd( ggScroll, 0, row++, 2, 1 );
-        pane2.gridAdd( new JLabel( "Action:", RIGHT ), 0, row );
-        ggComboActivate = new JComboBox( new Object[] { "Ignore", "Make active" });
-        pane2.gridAdd( ggComboActivate, 1, row++ );
-        pane2.gridAdd( createVSep(), 0, row++, 2, 1 );
+        ggScroll = new JScrollPane(ggListActivate);
+        pane2.gridAdd(new JLabel("Detected deactivated devices:"), 0, row++, 2, 1);
+        pane2.gridAdd(ggScroll, 0, row++, 2, 1);
+        pane2.gridAdd(new JLabel("Action:", RIGHT), 0, row);
+        ggComboActivate = new JComboBox(new Object[]{"Ignore", "Make active"});
+        pane2.gridAdd(ggComboActivate, 1, row++);
+        pane2.gridAdd(createVSep(), 0, row++, 2, 1);
 
-//		ggSep	= new JSeparator();
-//		ggSep.setBorder( BorderFactory.createEmptyBorder( 8, 0, 8, 0 ));
-//		pane2.gridAdd( ggSep, 0, row++, 2, 1 );
         ggListRemove = new JList();
-        ggScroll = new JScrollPane( ggListRemove );
-        pane2.gridAdd( new JLabel( "Devices not found:" ), 0, row++, 2, 1 );
-        pane2.gridAdd( ggScroll, 0, row++, 2, 1 );
-        pane2.gridAdd( new JLabel( "Action:", RIGHT ), 0, row );
-        ggComboRemove = new JComboBox( new Object[] { "Ignore", "Make inactive", "Remove from list" });
-        pane2.gridAdd( ggComboRemove, 1, row);
+        ggScroll = new JScrollPane(ggListRemove);
+        pane2.gridAdd(new JLabel("Devices not found:"), 0, row++, 2, 1);
+        pane2.gridAdd(ggScroll, 0, row++, 2, 1);
+        pane2.gridAdd(new JLabel("Action:", RIGHT), 0, row);
+        ggComboRemove = new JComboBox(new Object[]{"Ignore", "Make inactive", "Remove from list"});
+        pane2.gridAdd(ggComboRemove, 1, row);
         // row++;
-        pane2.setVisible( false );
-        pane.add( pane2, BorderLayout.CENTER );
-//		AbstractWindowHandler.setDeepFont( pane );
-
-//		op = new JOptionPane( pane, JOptionPane.PLAIN_MESSAGE, JOptionPane.OK_CANCEL_OPTION,
-//				new ImageIcon( GUIUtil.class.getResource( "assistent_64x64.png" )));
-//		dlg = op.createDialog( getWindow(), getResourceString( "prefsAudioDevicesAssistent" ) );
+        pane2.setVisible(false);
+        pane.add(pane2, BorderLayout.CENTER);
 
         runResult = new Runnable() {
-            public void run()
-            {
-//				String			name;
-                AudioBoxConfig	cfg3, cfg2;
+            public void run() {
+                AudioBoxConfig cfg3, cfg2;
 
                 for (AudioBoxConfig aCollDetected1 : collDetected) {
                     cfg2 = aCollDetected1;
@@ -824,142 +763,124 @@ final SpringPanel tabAudio = tab;
                         if ((cfg3 != null) && !cfg3.active) collActivate.add(cfg3);
                     }
                 }
-iterRemove:
-for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
-    cfg3 = collAudioBoxConfig;
-    for (AudioBoxConfig aCollDetected : collDetected) {
-        cfg2 = aCollDetected;
-        if (cfg2.name.equals(cfg3.name)) continue iterRemove;
-    }
-    collRemove.add(cfg3);
-}
+                iterRemove:
+                for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
+                    cfg3 = collAudioBoxConfig;
+                    for (AudioBoxConfig aCollDetected : collDetected) {
+                        cfg2 = aCollDetected;
+                        if (cfg2.name.equals(cfg3.name)) continue iterRemove;
+                    }
+                    collRemove.add(cfg3);
+                }
 
                 Collections.sort(collAdd);
                 Collections.sort(collActivate);
                 Collections.sort(collRemove);
 
-                ggListAdd.setListData( collAdd.toArray() );
-                ggListAdd.setVisibleRowCount( Math.max( 1, Math.min( collAdd.size(), 6 )));
-                if( collAdd.isEmpty() ) {
-                    ggComboAdd.setEnabled( false );
+                ggListAdd.setListData(collAdd.toArray());
+                ggListAdd.setVisibleRowCount(Math.max(1, Math.min(collAdd.size(), 6)));
+                if (collAdd.isEmpty()) {
+                    ggComboAdd.setEnabled(false);
                 } else {
-                    ggComboAdd.setSelectedIndex( 1 );
+                    ggComboAdd.setSelectedIndex(1);
                 }
-                ggListActivate.setListData( collActivate.toArray() );
-                ggListActivate.setVisibleRowCount( Math.max( 1, Math.min( collActivate.size(), 6 )));
-                ggListAdd.setVisibleRowCount( Math.max( 1, Math.min( collAdd.size(), 6 )));
-                if( collActivate.isEmpty() ) {
-                    ggComboActivate.setEnabled( false );
+                ggListActivate.setListData(collActivate.toArray());
+                ggListActivate.setVisibleRowCount(Math.max(1, Math.min(collActivate.size(), 6)));
+                ggListAdd.setVisibleRowCount(Math.max(1, Math.min(collAdd.size(), 6)));
+                if (collActivate.isEmpty()) {
+                    ggComboActivate.setEnabled(false);
                 } else {
-                    ggComboActivate.setSelectedIndex( 1 );
+                    ggComboActivate.setSelectedIndex(1);
                 }
-                ggListRemove.setListData( collRemove.toArray() );
-                ggListRemove.setVisibleRowCount( Math.max( 1, Math.min( collRemove.size(), 6 )));
-                if( collRemove.isEmpty() ) {
-                    ggComboRemove.setEnabled( false );
+                ggListRemove.setListData(collRemove.toArray());
+                ggListRemove.setVisibleRowCount(Math.max(1, Math.min(collRemove.size(), 6)));
+                if (collRemove.isEmpty()) {
+                    ggComboRemove.setEnabled(false);
                 } else {
-                    ggComboRemove.setSelectedIndex( 1 );
+                    ggComboRemove.setSelectedIndex(1);
                 }
                 pane2.makeCompactGrid();
-                b.setVisible( false );
-                pane2.setVisible( true );
-//				pane.makeCompactGrid();
+                b.setVisible(false);
+                pane2.setVisible(true);
 
-//				dlg.pack();
-                ((JDialog) SwingUtilities.getAncestorOfClass( JDialog.class, pane2 )).pack();
+                ((JDialog) SwingUtilities.getAncestorOfClass(JDialog.class, pane2)).pack();
             }
         };
 
-        testThread = new Thread( new Runnable() {
-            public void run()
-            {
-                final InputStream			inStream; // , errStream;
+        testThread = new Thread(new Runnable() {
+            public void run() {
+                final InputStream inStream; // , errStream;
 
-                final byte[]				inBuf		= new byte[128];
-//				final byte[]				errBuf		= new byte[128];
-                final File					cwd			= new File( scsynthPath ).getParentFile();
-                final ByteArrayOutputStream	baos		= new ByteArrayOutputStream();
-                final Pattern				ptrn1		= Pattern.compile( "Number of Devices: \\d+\\n(   \\d+ : \".+\" \\(\\d+ ins, \\d+ outs\\)\\n)+\\n" );
-//				final Pattern				ptrn2		= Pattern.compile( "\".+\"" );
-                final Pattern				ptrn2		= Pattern.compile( "\"(.+)\" \\((\\d+) ins, (\\d+) outs" ); // the trailing () makes the numOuts not disappear (why?!)
-                final Matcher				m1			= ptrn1.matcher( "" );
-                Matcher						m2;
-                String						name;
-                Process						p			= null;
-                int							len, ins, outs; // , resultCode  	= -1;
-                boolean						pRunning	= true;
+                final byte[] inBuf = new byte[128];
+                final File cwd = new File(scsynthPath).getParentFile();
+                final ByteArrayOutputStream baos = new ByteArrayOutputStream();
+                final Pattern ptrn1 = Pattern.compile("Number of Devices: \\d+\\n(   \\d+ : \".+\" \\(\\d+ ins, \\d+ outs\\)\\n)+\\n");
+                final Pattern ptrn2 = Pattern.compile("\"(.+)\" \\((\\d+) ins, (\\d+) outs"); // the trailing () makes the numOuts not disappear (why?!)
+                final Matcher m1 = ptrn1.matcher("");
+                Matcher m2;
+                String name;
+                Process p = null;
+                int len, ins, outs;
+                boolean pRunning = true;
 
                 try {
-                    p			= Runtime.getRuntime().exec( new String[] { scsynthPath, "-u", "0" }, null, cwd );
+                    p = Runtime.getRuntime().exec(new String[]{scsynthPath, "-u", "0"}, null, cwd);
                     // "Implementation note: It is a good idea for the input stream to be buffered."
-                    inStream	= new BufferedInputStream( p.getInputStream() );
-//					errStream	= new BufferedInputStream( p.getErrorStream() );
+                    inStream = new BufferedInputStream(p.getInputStream());
 
-                    while( keepThreadRunning.isSet() && pRunning ) {
+                    while (keepThreadRunning.isSet() && pRunning) {
                         try {
-                            Thread.sleep( 250 );   // a kind of cheesy way to wait for the program to end
-                        }
-                        catch( InterruptedException e5 ) { /* ignore */ }
+                            Thread.sleep(250);   // a kind of cheesy way to wait for the program to end
+                        } catch (InterruptedException e5) { /* ignore */ }
 
-                        if( inStream.available() > 0 ) {
+                        if (inStream.available() > 0) {
                             try {
                                 while (inStream.available() > 0) {
                                     len = Math.min(inBuf.length, inStream.available());
                                     final int len1 = inStream.read(inBuf, 0, len);
                                     baos.write(inBuf, 0, len1);
                                 }
-                            }
-                            catch( IOException e1 ) { /* ignore for now XXX */ }
+                            } catch (IOException e1) { /* ignore for now XXX */ }
 
-                            m1.reset( baos.toString() );
-                            if( m1.find() ) {
+                            m1.reset(baos.toString());
+                            if (m1.find()) {
                                 pRunning = false;
-//								keepThreadRunning.set( false );
-                                m2 = ptrn2.matcher( m1.group() );
-                                while( m2.find() ) {
-//									s = m2.group();
-//									System.out.println( "'" + s.substring( 1, s.length() - 1 ) + "'" );
-//									collDetected.add( s.substring( 1, s.length() - 1 ));
-                                    if( m2.groupCount() == 4 ) {
-                                        name	= m2.group( 1 );
-                                        ins		= Integer.parseInt( m2.group( 2 ));
-                                        outs	= Integer.parseInt( m2.group( 3 ));
-                                        if( (ins > 0) && (outs > 0) ) { // filter out single direction devices (like mac os x built-in mic and output)
-                                            collDetected.add( new AudioBoxConfig(
-                                                    null, name, ins, outs, true ));
+                                m2 = ptrn2.matcher(m1.group());
+                                while (m2.find()) {
+                                    if (m2.groupCount() == 4) {
+                                        name = m2.group(1);
+                                        ins = Integer.parseInt(m2.group(2));
+                                        outs = Integer.parseInt(m2.group(3));
+                                        if ((ins > 0) && (outs > 0)) { // filter out single direction devices (like mac os x built-in mic and output)
+                                            collDetected.add(new AudioBoxConfig(
+                                                    null, name, ins, outs, true));
                                         }
                                     }
                                 }
                             }
                         }
 
-//						handleConsole( errStream, errBuf );
                         try {
-//							resultCode	=
-                                p.exitValue();
-                            pRunning	= false;
-                            p			= null;
-//							printStream.println( "scsynth terminated (" + resultCode +")" );
+                            p.exitValue();
+                            pRunning = false;
+                            p = null;
                         }
                         // gets thrown if we call exitValue() while sc still running
-                        catch( IllegalThreadStateException e1 ) { /* ignore */ }
+                        catch (IllegalThreadStateException e1) { /* ignore */ }
                     } // while( keepThreadRunning && pRunning )
-                }
-                catch( IOException e3 ) {
+                } catch (IOException e3) {
                     // XXX
-                    System.err.println( "BootThread.run " + e3 );
-                }
-                finally {
-                    if( p != null ) {
-//						System.err.println( "scsynth didn't quit. we're killing it!" );
+                    System.err.println("BootThread.run " + e3);
+                } finally {
+                    if (p != null) {
                         p.destroy();
                     }
 
                     // not when user has cancelled thread!
-                    if( keepThreadRunning.isSet() ) EventQueue.invokeLater( runResult );
+                    if (keepThreadRunning.isSet()) EventQueue.invokeLater(runResult);
 
-                    synchronized( threadRunning ) {
-                        threadRunning.set( false );
+                    synchronized (threadRunning) {
+                        threadRunning.set(false);
                         threadRunning.notifyAll();
                     }
                 }
@@ -967,28 +888,27 @@ for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
         });
 
         testThread.start();
-        ggSpinner.setActive( true );
+        ggSpinner.setActive(true);
 
-        final JOptionPane op = new JOptionPane( pane,
-                                                JOptionPane.PLAIN_MESSAGE, JOptionPane.OK_CANCEL_OPTION,
-                                                new ImageIcon( GUIUtil.class.getResource( "assistent_64x64.png" )));
-        result = BasicWindowHandler.showDialog( op, getWindow(), getResourceString("prefsAudioDevicesAssistant"));
+        final JOptionPane op = new JOptionPane(pane,
+                JOptionPane.PLAIN_MESSAGE, JOptionPane.OK_CANCEL_OPTION,
+                new ImageIcon(GUIUtil.class.getResource("assistent_64x64.png")));
+        result = BasicWindowHandler.showDialog(op, getWindow(), getResourceString("prefsAudioDevicesAssistant"));
 
-        synchronized( threadRunning ) {
-            if( threadRunning.isSet() ) {  // i.e. premature dialog cancel
-                keepThreadRunning.set( false );
+        synchronized (threadRunning) {
+            if (threadRunning.isSet()) {  // i.e. premature dialog cancel
+                keepThreadRunning.set(false);
                 try {
                     threadRunning.wait();
-                }
-                catch( InterruptedException e1 ) { /* ignore */ }
+                } catch (InterruptedException e1) { /* ignore */ }
                 return;
             }
         }
 
-        if( result == JOptionPane.OK_OPTION ) {
+        if (result == JOptionPane.OK_OPTION) {
             try {
                 action = ggComboAdd.getSelectedIndex();
-                if( action > 0 ) {
+                if (action > 0) {
                     for (AudioBoxConfig aCollAdd : collAdd) {
                         cfg = aCollAdd;
                         cfg = cfg.changeID(createUniqueAudioBoxID());
@@ -1003,7 +923,7 @@ for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
                     }
                 }
                 action = ggComboActivate.getSelectedIndex();
-                if( action > 0 ) {
+                if (action > 0) {
                     for (AudioBoxConfig aCollActivate : collActivate) {
                         cfg = aCollActivate;
                         switch (action) {
@@ -1017,7 +937,7 @@ for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
                     }
                 }
                 action = ggComboRemove.getSelectedIndex();
-                if( action > 0 ) {
+                if (action > 0) {
                     for (AudioBoxConfig aCollRemove : collRemove) {
                         cfg = aCollRemove;
                         switch (action) {
@@ -1033,8 +953,8 @@ for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
                         }
                     }
                 }
-            } catch( BackingStoreException e1 ) {
-                BasicWindowHandler.showErrorDialog( getWindow(), e1, getResourceString( "errSavePrefs" ));
+            } catch (BackingStoreException e1) {
+                BasicWindowHandler.showErrorDialog(getWindow(), e1, getResourceString("errSavePrefs"));
             } finally {
                 abtm.fireTableDataChanged();
                 triggerCtrlRoomRefill();
@@ -1042,12 +962,11 @@ for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
         }
     }
 
-    private JComponent createVSep()
-    {
+    private JComponent createVSep() {
         final Box b = Box.createVerticalBox();
-        b.add( Box.createVerticalStrut( 8 ));
-        b.add( new JSeparator() );
-        b.add( Box.createVerticalStrut( 8 ));
+        b.add(Box.createVerticalStrut(8));
+        b.add(new JSeparator());
+        b.add(Box.createVerticalStrut(8));
         return b;
     }
 
@@ -1083,9 +1002,9 @@ for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
         setAudioBoxIDs.clear();
         setAudioBoxNames.clear();
 
-        final String[]		arrayNames;
-        AudioBoxConfig		cfg;
-        Preferences			cfgPrefs;
+        final String[] arrayNames;
+        AudioBoxConfig cfg;
+        Preferences cfgPrefs;
 
         try {
             arrayNames = abPrefs.childrenNames();
@@ -1202,91 +1121,82 @@ for (AudioBoxConfig collAudioBoxConfig : collAudioBoxConfigs) {
             }
         }
 
-        public boolean isCellEditable( int row, int col )
-        {
+        public boolean isCellEditable(int row, int col) {
             return true;
         }
 
-        public void setValueAt( Object value, int row, int col )
-        {
-            if( (row > collAudioBoxConfigs.size()) || (value == null) ) return;
+        public void setValueAt(Object value, int row, int col) {
+            if ((row > collAudioBoxConfigs.size()) || (value == null)) return;
 
-            final AudioBoxConfig cfg			= collAudioBoxConfigs.get( row );
-            String				name;
-            AudioBoxConfig		newCfg			= null;
-            int					newChannels;
-            boolean				newActive;
-            boolean				trigger			= false;
+            final AudioBoxConfig cfg = collAudioBoxConfigs.get(row);
 
-            switch( col ) {
-            case 0:
-                name = value.toString();
-                if ((name.length() > 0) &&
-                        !setAudioBoxNames.contains(name)) {
+            String name;
+            AudioBoxConfig newCfg = null;
+            int newChannels;
+            boolean newActive;
+            boolean trigger = false;
 
-                    newCfg = cfg.changeName(name);
-                    trigger = true;
-                }
-                break;
+            switch (col) {
+                case 0:
+                    name = value.toString();
+                    if ((name.length() > 0) &&
+                            !setAudioBoxNames.contains(name)) {
 
-            case 1:
-            case 2:
-                if( value instanceof Number ) {
-                    newChannels = Math.max( 0, ((Number) value).intValue() );
-                } else if( value instanceof String ) {
-                    try {
-                        newChannels = Math.max( 0, Integer.parseInt( value.toString() ));
+                        newCfg = cfg.changeName(name);
+                        trigger = true;
                     }
-                    catch( NumberFormatException e1 ) {
+                    break;
+
+                case 1:
+                case 2:
+                    if (value instanceof Number) {
+                        newChannels = Math.max(0, ((Number) value).intValue());
+                    } else if (value instanceof String) {
+                        try {
+                            newChannels = Math.max(0, Integer.parseInt(value.toString()));
+                        } catch (NumberFormatException e1) {
+                            break;
+                        }
+                    } else {
+                        assert false : value;
                         break;
                     }
-                } else {
-                    assert false : value;
+                    if (col == 1) {
+                        if (newChannels == cfg.numInputChannels) return;
+                        newCfg = cfg.changeChannels(newChannels, cfg.numOutputChannels);
+                    } else {
+                        if (newChannels == cfg.numOutputChannels) return;
+                        newCfg = cfg.changeChannels(cfg.numInputChannels, newChannels);
+                    }
                     break;
-                }
-                if( col == 1 ) {
-                    if( newChannels == cfg.numInputChannels ) return;
-                    newCfg = cfg.changeChannels( newChannels, cfg.numOutputChannels );
-                } else {
-                    if( newChannels == cfg.numOutputChannels ) return;
-                    newCfg = cfg.changeChannels( cfg.numInputChannels, newChannels );
-                }
-                break;
 
-            case 3:
-                if( value instanceof Boolean ) {
-                    newActive = (Boolean) value;
-                } else {
-                    assert false : value;
+                case 3:
+                    if (value instanceof Boolean) {
+                        newActive = (Boolean) value;
+                    } else {
+                        assert false : value;
+                        break;
+                    }
+                    if (newActive == cfg.active) return;
+                    newCfg = cfg.changeActive(newActive);
+                    trigger = true;
                     break;
-                }
-                if( newActive == cfg.active ) return;
-                newCfg = cfg.changeActive( newActive );
-                trigger = true;
-                break;
 
-            default:
-                break;
+                default:
+                    break;
             }
 
-            if( newCfg != null ) {
-                collAudioBoxConfigs.set( row, newCfg );
-                if( !cfg.name.equals( newCfg.name )) {
-//					try {
-//						abPrefs.node( cfg.id ).removeNode();
-                        setAudioBoxNames.remove( cfg.name );
-                        setAudioBoxNames.add( newCfg.name );
-//					}
-//					catch( BackingStoreException e1 ) {
-//						newCfg = cfg;
-//						GUIUtil.displayError( null, e1, getResourceString( "errLoadPrefs" ));
-//					}
+            if (newCfg != null) {
+                collAudioBoxConfigs.set(row, newCfg);
+                if (!cfg.name.equals(newCfg.name)) {
+                    setAudioBoxNames.remove(cfg.name);
+                    setAudioBoxNames.add(newCfg.name);
                 }
-                newCfg.toPrefs( abPrefs.node( newCfg.id ));
-                if( trigger ) triggerCtrlRoomRefill();
+                newCfg.toPrefs(abPrefs.node(newCfg.id));
+                if (trigger) triggerCtrlRoomRefill();
             }
 
-            fireTableRowsUpdated( row, row );	// updates sorting!
+            fireTableRowsUpdated(row, row);    // updates sorting!
         }
     }
 }
